[package]
name = "pallet-relayer-set"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
description = "Relayer set pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false }
log = "0.4.17"
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }

polkadot-sdk-frame = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, features = [
	"experimental",
	"runtime",
] }

[features]
default = ["std"]
runtime-benchmarks = [
	"polkadot-sdk-frame/runtime-benchmarks"
]
std = [
	"codec/std",
	"scale-info/std",
	
	"polkadot-sdk-frame/std"
]
try-runtime = [
	"polkadot-sdk-frame/try-runtime"
]
