[package]
name = "pallet-relayer-set"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition.workspace = true
repository.workspace = true
license = "Apache-2.0"
description = "Relayer set pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
log = { workspace = true, default-features = true }
scale-info = { features = ["derive"], workspace = true }

polkadot-sdk-frame = { workspace = true, default-features = false, features = [
    "runtime",
] }

[features]
default = ["std"]
runtime-benchmarks = [
	"polkadot-sdk-frame/runtime-benchmarks",
]
std = [
	"codec/std",
	"log/std",
	"polkadot-sdk-frame/std",
	"scale-info/std",
]
try-runtime = [
	"polkadot-sdk-frame/try-runtime",
]
