[package]
name = "pallet-transaction-storage"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "Storage chain pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
array-bytes = { optional = true, workspace = true }
codec = { workspace = true }
log = { workspace = true, default-features = true }
scale-info = { features = ["derive"], workspace = true }

polkadot-sdk-frame = { workspace = true, default-features = false, features = [
    "runtime",
] }
sp-transaction-storage-proof = { workspace = true, default-features = false }

[features]
default = ["std"]
runtime-benchmarks = [
	"array-bytes",
	"polkadot-sdk-frame/runtime-benchmarks",
]
std = [
	"codec/std",
	"log/std",
	"polkadot-sdk-frame/std",
	"scale-info/std",
	"sp-transaction-storage-proof/std",
]
try-runtime = [
	"polkadot-sdk-frame/try-runtime",
]
