[package]
name = "pallet-transaction-storage"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "Storage chain pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
array-bytes = { optional = true, workspace = true }
codec = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
tracing = { workspace = true }
transaction-storage-primitives = { workspace = true }

polkadot-sdk-frame = { workspace = true, default-features = false, features = [
	"runtime",
] }
sp-transaction-storage-proof = { workspace = true, default-features = false }

[dev-dependencies]
pallets-common = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
	"array-bytes",
	"pallets-common/runtime-benchmarks",
	"polkadot-sdk-frame/runtime-benchmarks",
]
std = [
	"codec/std",
	"pallets-common/std",
	"polkadot-sdk-frame/std",
	"scale-info/std",
	"sp-transaction-storage-proof/std",
	"tracing/std",
	"transaction-storage-primitives/std",
]
try-runtime = [
	"pallets-common/try-runtime",
	"polkadot-sdk-frame/try-runtime",
]
