[package]
name = 'pallet-validator-set'
version = '1.0.0'
authors = [
	'Gautam Dhameja <quasijatt@outlook.com>',
	'Parity Technologies <admin@parity.io>',
]
edition.workspace = true
repository.workspace = true
license = 'Apache-2.0'

[dependencies]
codec = { workspace = true, features = ["derive"] }
log = { workspace = true, default-features = true }
scale-info = { features = ["derive"], workspace = true }

pallet-session = { workspace = true, default-features = false, features = [
	"historical",
] }
polkadot-sdk-frame = { workspace = true, default-features = false, features = [
	"runtime",
] }
sp-staking = { workspace = true, default-features = false }

[dev-dependencies]
pallets-common = { workspace = true, default-features = false }
serde = { features = ["derive"], workspace = true }

[features]
default = ['std']
runtime-benchmarks = [
	"pallet-session/runtime-benchmarks",
	"pallets-common/runtime-benchmarks",
	"polkadot-sdk-frame/runtime-benchmarks",
	"sp-staking/runtime-benchmarks",
]
std = [
	"log/std",
	"pallets-common/std",
	"sp-staking/std",
	'codec/std',
	'pallet-session/std',
	'polkadot-sdk-frame/std',
	'scale-info/std',
]
try-runtime = [
	"pallet-session/try-runtime",
	"pallets-common/try-runtime",
	'polkadot-sdk-frame/try-runtime',
]
