[package]
name = 'pallet-validator-set'
version = '1.0.0'
authors = ['Gautam Dhameja <quasijatt@outlook.com>', 'Parity Technologies <admin@parity.io>']
edition.workspace = true
repository.workspace = true
license = 'Apache-2.0'
publish = false

[dependencies]
codec = { workspace = true, features = ["derive"] }
log = { workspace = true, default-features = true }
scale-info = { features = ["derive"], workspace = true }

polkadot-sdk-frame = { workspace = true, default-features = false, features = [
	"runtime",
] }
sp-staking = { workspace = true, default-features = false }
pallet-session = { workspace = true, default-features = false, features = [
	"historical",
] }

[dev-dependencies]
serde = { features = ["derive"], workspace = true }
bulletin-pallets-common = { workspace = true, default-features = false }

[features]
default = ['std']
runtime-benchmarks = [
	"bulletin-pallets-common/runtime-benchmarks",
	"pallet-session/runtime-benchmarks",
	"polkadot-sdk-frame/runtime-benchmarks",
	"sp-staking/runtime-benchmarks",
]
std = [
	"bulletin-pallets-common/std",
	"log/std",
	"sp-staking/std",
	'codec/std',
	'pallet-session/std',
	'polkadot-sdk-frame/std',
	'scale-info/std',
]
try-runtime = [
	"bulletin-pallets-common/try-runtime",
	"pallet-session/try-runtime",
	'polkadot-sdk-frame/try-runtime',
]
