[package]
name = "bulletin-polkadot-runtime"
version = "1.0.0"
description = "Polkadot Bulletin solochain"
authors = ["Parity Technologies <admin@parity.io>"]
edition.workspace = true
license = "MIT-0"
publish = false
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
log = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
serde_json = { features = ["alloc"], workspace = true }

# Polkadot SDK umbrella crate
polkadot-sdk = { workspace = true, default-features = false, features = [
	"bp-header-chain",
	"bp-messages",
	"bp-parachains",
	"bp-polkadot-core",
	"bp-runtime",
	"bp-test-utils",
	"bp-xcm-bridge-hub",
	"bridge-runtime-common",
	"frame-executive",
	"frame-support",
	"frame-system",
	"frame-system-rpc-runtime-api",
	"frame-try-runtime",
	"pallet-authorship",
	"pallet-babe",
	"pallet-bridge-grandpa",
	"pallet-bridge-messages",
	"pallet-bridge-parachains",
	"pallet-bridge-relayers",
	"pallet-grandpa",
	"pallet-offences",
	"pallet-proxy",
	"pallet-session",
	"pallet-staking",
	"pallet-sudo",
	"pallet-timestamp",
	"pallet-transaction-payment",
	"pallet-transaction-payment-rpc-runtime-api",
	"pallet-utility",
	"pallet-xcm",
	"pallet-xcm-bridge-hub",
	"parachains-common",
	"runtime",
	"sp-api",
	"sp-block-builder",
	"sp-consensus-babe",
	"sp-consensus-grandpa",
	"sp-core",
	"sp-genesis-builder",
	"sp-inherents",
	"sp-io",
	"sp-keyring",
	"sp-offchain",
	"sp-runtime",
	"sp-session",
	"sp-staking",
	"sp-std",
	"sp-storage",
	"sp-tracing",
	"sp-transaction-pool",
	"sp-transaction-storage-proof",
	"sp-trie",
	"sp-version",
	"staging-xcm",
	"staging-xcm-builder",
	"staging-xcm-executor",
] }

# Crates excluded from umbrella - must remain as individual dependencies
bp-bridge-hub-cumulus = { workspace = true }
bp-polkadot-bulletin = { workspace = true }

# Needed individually for disable-logging feature (can't pass crate-specific features through umbrella)
sp-api = { workspace = true }

# Local dependencies
pallet-relayer-set = { workspace = true }
pallet-transaction-storage = { workspace = true }
pallet-validator-set = { workspace = true }
pallets-common = { workspace = true }

[build-dependencies]
polkadot-sdk = { optional = true, workspace = true, features = ["substrate-wasm-builder"] }
substrate-wasm-builder = { optional = true, workspace = true }

[dev-dependencies]
pallet-bridge-messages = { workspace = true, features = ["std", "test-helpers"] }
polkadot-sdk = { workspace = true, default-features = false, features = [
	"bp-header-chain",
	"bp-messages",
	"bp-polkadot-core",
	"bp-runtime",
	"bp-test-utils",
	"bridge-runtime-common",
	"frame-support",
	"frame-system",
	"pallet-bridge-grandpa",
	"pallet-bridge-messages",
	"pallet-bridge-parachains",
	"pallet-proxy",
	"pallet-sudo",
	"sp-consensus-grandpa",
	"sp-core",
	"sp-io",
	"sp-keyring",
	"sp-runtime",
	"sp-tracing",
	"sp-trie",
] }
hex = { workspace = true }
static_assertions = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"serde_json/std",
	"polkadot-sdk/std",
	"bp-bridge-hub-cumulus/std",
	"bp-polkadot-bulletin/std",
	"sp-api/std",
	"pallet-relayer-set/std",
	"pallet-transaction-storage/std",
	"pallet-validator-set/std",
	"pallets-common/std",
	"polkadot-sdk",
]
runtime-benchmarks = [
	"polkadot-sdk/runtime-benchmarks",
	"pallet-relayer-set/runtime-benchmarks",
	"pallet-transaction-storage/runtime-benchmarks",
	"pallet-validator-set/runtime-benchmarks",
	"pallets-common/runtime-benchmarks",
]
try-runtime = [
	"polkadot-sdk/try-runtime",
	"pallet-relayer-set/try-runtime",
	"pallet-transaction-storage/try-runtime",
	"pallet-validator-set/try-runtime",
	"pallets-common/try-runtime",
]

# Enable metadata hash generation at compile time for the `CheckMetadataHash` extension.
metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# A feature that should be enabled when the runtime should be built for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller, like logging for example.
on-chain-release-build = ["metadata-hash", "sp-api/disable-logging"]
