[package]
name = "bulletin-westend-runtime"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "Westend's Bulletin parachain runtime"
license = "Apache-2.0"
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
serde = { optional = true, features = ["derive"], workspace = true, default-features = false }
serde_json = { features = ["alloc"], workspace = true }
tracing = { workspace = true }

# Polkadot SDK umbrella crate
polkadot-sdk = { workspace = true, default-features = false, features = [
	"runtime",
	# Cumulus pallets
	"cumulus-pallet-aura-ext",
	"cumulus-pallet-parachain-system",
	"cumulus-pallet-weight-reclaim",
	"cumulus-pallet-xcm",
	"cumulus-pallet-xcmp-queue",
	"cumulus-primitives-aura",
	"cumulus-primitives-core",
	"cumulus-primitives-utility",
	# Pallets
	"pallet-aura",
	"pallet-authorship",
	"pallet-balances",
	"pallet-collator-selection",
	"pallet-message-queue",
	"pallet-session",
	"pallet-skip-feeless-payment",
	"pallet-sudo",
	"pallet-timestamp",
	"pallet-transaction-payment",
	"pallet-transaction-payment-rpc-runtime-api",
	"pallet-utility",
	"pallet-xcm",
	"parachains-common",
	"polkadot-parachain-primitives",
	"polkadot-runtime-common",
	# Primitives
	"sp-api",
	"sp-block-builder",
	"sp-consensus-aura",
	"sp-core",
	"sp-genesis-builder",
	"sp-inherents",
	"sp-io",
	"sp-keyring",
	"sp-offchain",
	"sp-runtime",
	"sp-session",
	"sp-storage",
	"sp-transaction-pool",
	"sp-transaction-storage-proof",
	"sp-version",
	# XCM
	"staging-parachain-info",
	"staging-xcm",
	"staging-xcm-builder",
	"staging-xcm-executor",
	"xcm-runtime-apis",
	# Other
	"testnet-parachains-constants",
	# Benchmarking pallets
	"cumulus-pallet-session-benchmarking",
	"pallet-xcm-benchmarks",
] }

# Crates excluded from umbrella - must remain as individual dependency
westend-runtime-constants = { workspace = true }
# Needed for register_validate_block! macro and transaction-index feature
cumulus-pallet-parachain-system = { workspace = true, features = ["transaction-index"] }
# Needed for westend-specific constants (umbrella doesn't enable westend feature)
testnet-parachains-constants = { workspace = true, features = ["westend"] }

# Needed individually for disable-logging feature (can't pass crate-specific features through umbrella)
sp-api = { workspace = true }

# Local dependencies
pallet-transaction-storage = { workspace = true }
pallets-common = { workspace = true }

[dev-dependencies]
polkadot-sdk = { workspace = true, default-features = false, features = [
	"cumulus-pallet-weight-reclaim",
	"frame-metadata-hash-extension",
	"frame-support",
	"frame-system",
	"pallet-skip-feeless-payment",
	"pallet-transaction-payment",
	"parachains-common",
	"parachains-runtimes-test-utils",
	"sp-core",
	"sp-io",
	"sp-keyring",
	"sp-runtime",
	"staging-xcm",
	"xcm-runtime-apis",
] }

[build-dependencies]
polkadot-sdk = { optional = true, workspace = true, features = ["substrate-wasm-builder"] }
substrate-wasm-builder = { optional = true, workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde?/std",
	"serde_json/std",
	"tracing/std",
	"polkadot-sdk/std",
	"sp-api/std",
	"westend-runtime-constants/std",
	"cumulus-pallet-parachain-system/std",
	"testnet-parachains-constants/std",
	"pallet-transaction-storage/std",
	"pallets-common/std",
]
runtime-benchmarks = [
	"polkadot-sdk/runtime-benchmarks",
	"westend-runtime-constants/runtime-benchmarks",
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"pallet-transaction-storage/runtime-benchmarks",
	"pallets-common/runtime-benchmarks",
	"polkadot-sdk/runtime-benchmarks"
]
try-runtime = [
	"polkadot-sdk/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"pallet-transaction-storage/try-runtime",
	"pallets-common/try-runtime",
	"polkadot-sdk/try-runtime"
]
fast-runtime = [
	"westend-runtime-constants/fast-runtime",
]

# Enable the metadata hash generation in the wasm builder.
metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# A feature that should be enabled when the runtime should be built for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller, like logging for example.
on-chain-release-build = ["metadata-hash", "sp-api/disable-logging"]
