[package]
name = "bulletin-sdk-rust"
version = "0.1.0"
edition = "2021"
authors = ["Parity Technologies <admin@parity.io>"]
license = "GPL-3.0-or-later"
description = "Off-chain client SDK for Polkadot Bulletin Chain"
repository = "https://github.com/paritytech/polkadot-bulletin-chain"

[dependencies]
# Core dependencies (no_std compatible)
codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = [
	"derive",
] }

# IPFS CID support
cid = { version = "0.11", default-features = false, features = ["alloc"] }
multihash = { version = "0.19", default-features = false }
unsigned-varint = { version = "0.8", default-features = false }

# Re-export pallet types
pallet-transaction-storage = { workspace = true, default-features = false }

# Substrate primitives
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }

# Serialization for DAG-PB
serde = { version = "1.0", default-features = false, features = [
	"alloc",
	"derive",
], optional = true }

# Error handling (std-only)
thiserror = { version = "2.0", optional = true }

# Logging (std-only)
# Re-export tracing from workspace for compatibility with Substrate contexts
tracing = { workspace = true, optional = true }

# Async support (std-only)
async-trait = { version = "0.1", optional = true }

# Async runtime and subxt (std-only)
# Using 0.37 with V14 metadata (stable, well-tested)
subxt = { version = "0.37", optional = true }
tokio = { version = "1.40", features = ["full"], optional = true }

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }
subxt = "0.37"

[features]
default = ["std"]

std = [
	"async-trait",
	"cid/std",
	"codec/std",
	"multihash/std",
	"pallet-transaction-storage/std",
	"scale-info/std",
	"serde?/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"subxt",
	"thiserror",
	"tokio",
	"tracing",
	"unsigned-varint/std",
	"tracing?/std"
]

# Enable DAG serialization features
serde-support = ["serde"]

# Runtime benchmarking (no-op for SDK, but required for workspace consistency)
runtime-benchmarks = [
	"pallet-transaction-storage/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

# Try-runtime support (no-op for SDK, but required for workspace consistency)
try-runtime = [
	"pallet-transaction-storage/try-runtime",
	"sp-runtime/try-runtime",
]

# Note: Examples and integration tests are not included in the repository because they
# require metadata files from a running Bulletin Chain node and would cause CI failures.
# Complete example code is available in the SDK book documentation (docs/sdk-book/).
# For reference implementations, see the TypeScript SDK examples which don't require
# compile-time metadata generation.
