[package]
name = "bulletin-sdk-rust"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license = "GPL-3.0-or-later"
description = "Off-chain client SDK for Polkadot Bulletin Chain"

[dependencies]
# Core dependencies
codec = { workspace = true }
scale-info = { workspace = true, features = [
	"derive",
] }

# IPFS CID support
cid = { version = "0.11", default-features = false, features = ["alloc"] }

# CID primitives
transaction-storage-primitives = { workspace = true }

# Substrate primitives
sp-core = { workspace = true }
sp-runtime = { workspace = true }

# Error handling (std-only)
thiserror = { version = "2.0", optional = true }

# Async runtime and subxt (std-only)
subxt = { version = "0.44", optional = true }
subxt-signer = { version = "0.44", features = ["sr25519"], optional = true }
tokio = { version = "1.40", features = ["time"], optional = true }

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }
subxt = "0.44"

[features]
default = ["std"]

std = [
	"cid/std",
	"codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"subxt",
	"subxt-signer",
	"thiserror",
	"tokio",
	"transaction-storage-primitives/std",
]

# Runtime benchmarking (no-op for SDK, but required for workspace consistency)
runtime-benchmarks = [
	"sp-runtime/runtime-benchmarks",
]

# Try-runtime support (no-op for SDK, but required for workspace consistency)
try-runtime = [
	"sp-runtime/try-runtime",
]

# Note: Examples and integration tests are not included in the repository because they
# require metadata files from a running Bulletin Chain node and would cause CI failures.
# Complete example code is available in the SDK book documentation (docs/book/).
# For reference implementations, see the TypeScript SDK examples which don't require
# compile-time metadata generation.
