[package]
name = "rust-authorize-and-store"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "authorize-and-store"
path = "src/main.rs"

[dependencies]
# Bulletin SDK (provides BulletinConfig and ProvideCidConfig)
bulletin-sdk-rust = { path = "../../../sdk/rust" }

# Subxt for blockchain interaction
subxt = { version = "0.44" }
subxt-signer = { version = "0.44", features = ["sr25519"] }

# CLI and utilities
clap = { version = "4.2", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
hex = "0.4"

# SCALE codec
codec = { package = "parity-scale-codec", version = "3.6", features = [
	"derive",
] }
scale-info = "2.11"

[features]
default = ["polkadot-runtime"]
polkadot-runtime = []
westend-runtime = []
