[package]
name = "bulletin-transaction-storage-primitives"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true
description = "Primitives for transaction storage pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cid = { features = ["alloc"], workspace = true }
codec = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
tracing = { workspace = true }
sp-io = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }     # TEMPORARY: for temp_runtime_api
sp-runtime = { workspace = true, default-features = false } # TEMPORARY: for temp_runtime_api

[features]
default = ["std"]
std = [
	"cid/std",
	"codec/std",
	"scale-info/std",
	"sp-api/std",     # TEMPORARY
	"sp-io/std",
	"sp-runtime/std", # TEMPORARY
	"tracing/std",
]
