[package]
name = "bulletin-transaction-storage-primitives"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true
description = "Primitives for transaction storage pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cid = { features = ["alloc"], workspace = true }
codec = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
sp-io = { workspace = true, default-features = false }
sp-transaction-storage-proof = { workspace = true, default-features = false }
tracing = { workspace = true }

[features]
default = ["std"]
std = [
	"cid/std",
	"codec/std",
	"scale-info/std",
	"sp-io/std",
	"sp-transaction-storage-proof/std",
	"tracing/std",
]
