[package]
name = "pallet-bulletin-transaction-storage-runtime-api"
version = "0.3.0-draft"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true
description = "Runtime API for the Bulletin Chain transaction-storage pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bulletin-transaction-storage-primitives = { workspace = true }
codec = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
sp-api = { workspace = true }

[features]
default = ["std"]
std = [
	"bulletin-transaction-storage-primitives/std",
	"codec/std",
	"scale-info/std",
	"sp-api/std",
]
