[package]
name = "bp-people-hub-polkadot"
description = "Primitives of PeopleHubPolkadot parachain runtime."

[dependencies]

# Bridge Dependencies
bp-bridge-hub-cumulus = { workspace = true, default-features = false }
bp-header-chain = { workspace = true, default-features = false }
bp-polkadot-core = { workspace = true, default-features = false }
bp-runtime = { workspace = true, default-features = false }
bp-messages = { workspace = true, default-features = false }

# Substrate Based Dependencies
frame-support = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

# Polkadot
xcm = { workspace = true, default-features = false }
[features]
default = ["std"]
std = [
	"bp-bridge-hub-cumulus/std",
	"bp-header-chain/std",
	"bp-messages/std",
	"bp-polkadot-core/std",
	"bp-runtime/std",
	"frame-support/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
