[package]
name = "bulletin-westend-integration-tests"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "XCM integration tests for Bulletin Westend parachain"
license = "Apache-2.0"
publish = false

[dependencies]
# Polkadot SDK umbrella crate
polkadot-sdk = { workspace = true, features = [
	"std",
	"cumulus-primitives-core",
	"emulated-integration-tests-common",
	"frame-support",
	"parachains-common",
	"parachains-runtimes-test-utils",
	"sp-core",
	"sp-keyring",
	"sp-runtime",
	"staging-xcm",
	"staging-xcm-executor",
	"xcm-emulator",
] }

# Emulated chains from Polkadot SDK (not available through umbrella)
westend-emulated-chain = { workspace = true }
westend-runtime = { workspace = true }
asset-hub-westend-emulated-chain = { workspace = true }
asset-hub-westend-runtime = { workspace = true }

# Local runtime
bulletin-westend-runtime = { workspace = true, default-features = true }

[features]
runtime-benchmarks = [
	"polkadot-sdk/runtime-benchmarks",
	"asset-hub-westend-runtime/runtime-benchmarks",
	"bulletin-westend-runtime/runtime-benchmarks",
	"westend-runtime/runtime-benchmarks",
]
try-runtime = [
	"polkadot-sdk/try-runtime",
	"asset-hub-westend-runtime/try-runtime",
	"bulletin-westend-runtime/try-runtime",
	"westend-runtime/try-runtime",
]
